# issue-to-pr-agent

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
apps/api/: README.md
apps/cli/: README.md
apps/worker/: README.md
docs/: approval-policy.example.json  architecture.md  delivery-governance.example.json  operations.md  phases.md
src/issue_to_pr_agent/: __init__.py  __main__.py  agent.py  cli.py  config.py  exceptions.py  git_tools.py  github_client.py  llm.py  logging_utils.py  models.py  policy.py  storage.py
src/issue_to_pr_agent/agents/context_builder/: __init__.py  base.py  repository.py
src/issue_to_pr_agent/agents/patcher/: __init__.py  base.py
src/issue_to_pr_agent/agents/planner/: __init__.py  base.py  heuristic.py
src/issue_to_pr_agent/application/services/: __init__.py  (+15 more)
src/issue_to_pr_agent/domain/: entities.py
src/issue_to_pr_agent/observability/: __init__.py
src/issue_to_pr_agent/shared/: __init__.py  exceptions.py
tests/integration/: test_api_integration.py  test_worker_integration.py
tests/unit/: test_agent.py  test_api.py  test_approval.py  test_auth.py  test_autofix.py  test_config.py  test_context_builder.py  test_delivery.py  test_integrations.py  test_model_routing.py  test_observability.py  test_patch_execution.py  test_patch_generation.py  test_plan_validation.py  test_platform.py  test_policy.py  test_proposal_template.py  test_queue.py  test_release.py  test_runtime.py  test_sandbox.py  test_storage.py  test_verification.py
(+62 files in other folders)
