[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "issue-to-pr-agent"
version = "0.1.0"
description = "A product-oriented GitHub issue-to-PR agent foundation."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "OpenAI Codex" }
]
dependencies = []

[project.scripts]
issue-to-pr = "issue_to_pr_agent.cli:main"
issue-to-pr-api = "issue_to_pr_agent.interfaces.http.server:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
